--- a/TodasF.css
+++ b/TodasF.css
@@ -1,3 +1,24 @@
+.logo {
+    position: absolute;
+    top: -30px;
+    left: 30px;
+    width: 160px;
+    height: auto;
+}
+
+@media (max-width: 768px) {
+    .logo {
+        width: 80px; /* Reduz o tamanho para telas menores */
+        left: 16px; /* Ajusta a posição */
+        top: 10px;
+    }
+}
+
+body{
+    background-color: #2a9d8f;
+    color: white;
+}
+
 body {
     font-family: Arial, sans-serif;
     margin: 20px;
@@ -24,20 +45,44 @@ body {
 }
 
 button {
-    background-color: #333;
+    background-color: #1E7A6C;
     color: white;
-    padding: 10px;
-    border: none;
-    cursor: pointer;
+    padding: 10px 15px;
+    border-radius: none;
 }
 
 .carrinho {
-    margin-top: 30px;
-    padding: 20px;
-    border: 1px solid #ccc;
-    display: inline-block;
+    background-color: #2A9D8F; 
+    color: white; 
+    position: fixed;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 120px;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+@media(max-width: 768px){
+    .carrinho{
+        width: 100px;
+    }
 }
 
+
+.icon-carrinho{
+    width: 80%;
+    height: auto;
+}
+@media(max-width: 768px){
+    .icon-carrinho{
+        width: 70%;
+    }
+}
 
 /*Reser basico*/
 * {
@@ -92,16 +137,15 @@ nav ul li a {
 }
 
 .produto {
-    background: #f4f4f4;
-    padding: 20px;
-    border-radius: 5px;
-    width: 250px;
-    box-shadow: 2px 2px 10px rgba(0,0,0,0.1);
+   background-color: #2A9D8F; 
+    padding: 10px; 
+    border-radius: 10px;
 }
 
 .produto img {
-    width: 100%;
-    border-radius: 5px;
+    background-color: #2A9D8F; 
+    padding: 10px; 
+    border-radius: 10px; 
 }
 
 .produto h3 {
@@ -127,17 +171,14 @@ footer {
 }
 
 button {
-    background-color: #007bff;
+   background-color: #1E7A6C; 
     color: white;
-    border: none;
     padding: 10px 15px;
     border-radius: 5px;
-    cursor: pointer;
-    transition: background 0.3s ease-in-out;
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #166553;
 }
 
 @keyframes fadeIn {
@@ -257,14 +298,17 @@ button:hover {
 
 #tela-boas-vindas {
     position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
-    height: 100%;
-    background: #333;
+    height: 100vh;
+    background-color: black;
     color: white;
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 2em;
+    z-index: 9999;
     opacity: 1;
     transition: opacity 1.5s ease-in-out;
 }
@@ -273,4 +317,26 @@ button:hover {
     opacity: 0 !important;
     pointer-events: none;
     transition: opacity 1.5s ease-in-out;
+}
+
+
+/*barra de pesquisa*/
+.barra-pesquisa {
+    width: 450px;
+    height: 45px;
+    padding: 10px;
+    border-radius: 8px;
+    border: 2px solid #fff;
+    background-color: #2A9D8F;
+    color: white;
+    font-size: 18px;
+}
+.barra-pesquisa::placeholder{
+    color: white;
+    opacity: 0.7;
+}
+@media(max-width: 768px) {
+    .barra-pesquisa {
+        width: 100%;
+    }
 }
